<resources>
    <string name="app_name">差分宝</string>
    <string name="Version" translatable="false">1.0.0</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>】
    <string name="prompt_passwordag">确认密码</string>】

    <string name="prompt_email_hint">请输入账号/手机号</string>
    <string name="prompt_password_hint">请输入密码</string>】
    <string name="prompt_password_hint_t">请输入6-18字母跟数字的密码</string>】

    <string name="renew">刷新</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="progress_wait" translatable="false">正在获取源节点...</string>
    <string name="progress_login" translatable="false">正在登录...</string>
    <string name="option" translatable="false">提示</string>



    <string name="welcomejoin" translatable="false">欢迎加入</string>
    <string name="fogetmm" translatable="false">忘记密码</string>

    <string name="xq" translatable="false">详情</string>
    <string name="wrong" translatable="false">账号或者密码错误</string>
    <string name="zc" translatable="false">没有账号？<font color="#4E8CEF">立即注册</font></string>
    <string name="zctext" translatable="false">注册</string>


    <string name="hqyzm" translatable="false">获取验证码</string>

    <string name="tt1" translatable="false">我已阅读并同意<font color="#4E8CEF">《用户协议》</font></string>



    <string name="yzm_hint" translatable="false">请输入验证码</string>

    <string name="yzm" translatable="false">验证码</string>

    <string name="hyjr" translatable="false">欢迎加入，</string>

    <string name="wrongphone" translatable="false">手机号码不存在</string>

    <string name="wrongyzm" translatable="false">获取验证码失败,请检查网络！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="hdk_mes">是否确定要保存地块？</string>
    <string name="zbjl">账单记录</string>
    <string name="zjsr">总计收入（元）</string>
    <string name="zjzc">总计支出（元）</string>

    <string name="pay">支出</string>
    <string name="income">收入</string>
    <string name="addzb">添加账单</string>
    <string name="biaoti">标题</string>
    <string name="date">日期</string>
    <string name="money">金额</string>
    <string name="yuan">元</string>
    <string name="bz">备注</string>
    <string name="bz_h">请输入备注</string>
    <string name="bt">必填</string>

    <string name="save">保存</string>
    <string name="wdnj">我的农机</string>
    <string name="zdxq">账单详情</string>
    <string name="jb">解绑</string>
    <string name="jobname">作业名称</string>
    <string name="username">客户姓名</string>
    <string name="username_h">请输入客户姓名</string>
    <string name="userphone">客户电话</string>
    <string name="userphone_h">请输入客户电话</string>
    <string name="dj">单价（元/亩）</string>

    <string name="dzdk">地块地址</string>
    <string name="sy">首页</string>
    <string name="fwgn">服务与功能</string>
    <string name="ljzymj">累计作业面积</string>
    <string name="wm">万亩</string>
    <string name="wy">万元</string>
    <string name="t">天</string>
    <string name="zytj">作业统计</string>
    <string name="dktj">地块统计</string>
    <string name="ljzbsr">累计账本收入</string>

    <string name="ljjkcl">累计监控车辆</string>
    <string name="ddq">打点器</string>
    <string name="xf">续费</string>
    <string name="xfdd">续费订单</string>
    <string name="cm">测亩</string>
    <string name="me">我的</string>
    <string name="ycl">已测量</string>
    <string name="cklb">查看列表</string>
    <string name="dkk">地块/块</string>
    <string name="mjm">面积/亩</string>
    <string name="qxzcmfs">请选择测亩方式</string>

    <string name="czsb">车载设备</string>
    <string name="czsbmes">边干活边测量，随车测量干活精准</string>


    <string name="rdcl">绕地测量</string>
    <string name="rdclmes">拿着手机绕地走一圈，地块精准无误</string>


    <string name="hdk">画地块</string>
    <string name="hdkmes">拿出手机直接打点，画出地块测量面积</string>

    <string name="delete">删除</string>
    <string name="syb">上一步</string>
    <string name="complate">完成</string>
    <string name="search">搜索</string>
    <string name="fzbq">分组标签</string>

    <string name="xgzb">修改坐标</string>
    <string name="bjxx">编辑信息</string>

    <string name="jz">记账</string>
    <string name="fx">分享</string>
    <string name="tp">图片</string>

    <string name="wmmdk">未命名地块01</string>

    <string name="dkname">地块名称</string>
    <string name="zwlx">作物类型</string>
    <string name="fz">分组</string>
    <string name="grxx">个人信息</string>
    <string name="xgmm">修改密码</string>
    <string name="bbsj">版本升级</string>
    <string name="tcdl">退出登录</string>
</resources>