<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"

    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="false"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
              android:layout_gravity="center_vertical"
             android:layout_height="30dp">
          <TextView
              android:layout_width="wrap_content"
              android:text="@string/hdk"
              style="@style/txt_zbxq_bt_b"
              android:layout_height="30dp"/>


             <TextView
                 android:id="@+id/ms"
                 style="@style/txt_zbxq_bt_b"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_centerInParent="true"
                 />

             <TextView
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"

                 style="@style/txt_zbxq_bt_b"
                 android:layout_height="30dp"/>
         </RelativeLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:minHeight="40dp"
             android:gravity="center_vertical"
             android:layout_height="wrap_content">
          <TextView
              android:layout_width="0dp"
              android:layout_weight="1"
              style="@style/txt_zbxq_bt"
              android:text="@string/dzdk"
              android:layout_height="wrap_content"/>
             <TextView
                 style="@style/txt_zbxq_bt_b"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                   android:layout_height="wrap_content"/>

         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:minHeight="40dp"
             android:gravity="center_vertical"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 style="@style/txt_zbxq_bt"
                 android:text="@string/username"
                 android:layout_height="wrap_content"/>
             <TextView
                 style="@style/txt_zbxq_bt_b"
                 android:layout_width="0dp"
                 android:layout_weight="3"

                 android:layout_height="wrap_content"/>

         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:minHeight="40dp"
             android:gravity="center_vertical"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 style="@style/txt_zbxq_bt"
                 android:text="@string/userphone"
                 android:layout_height="wrap_content"/>
             <TextView
                 style="@style/txt_zbxq_bt_b"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                  android:layout_height="wrap_content"/>

         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:minHeight="40dp"
             android:gravity="center_vertical"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 style="@style/txt_zbxq_bt"
                 android:text="@string/bz"
                 android:layout_height="wrap_content"/>
             <TextView
                 style="@style/txt_zbxq_bt_b"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                  android:layout_height="wrap_content"/>

         </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:minHeight="40dp"
             android:gravity="center_vertical"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 style="@style/txt_zbxq_bt"
                 android:text="@string/tp"
                 android:layout_height="wrap_content"/>
             <LinearLayout

                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="wrap_content">
               <ImageView

                   android:layout_width="88dp"
                   android:layout_height="88dp"/>

                 <ImageView
                     android:layout_marginLeft="8dp"
                     android:layout_width="88dp"
                     android:layout_height="88dp"/>
             </LinearLayout>

         </LinearLayout>

     </LinearLayout>
    </ScrollView>

</LinearLayout>